2010-07-31 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-icontext.c (is_candidate_for_schemes):
	Implement the function.

	* src/core/na-icontext.c (is_candidate_for_selection_count):
	Implement the function.

	* src/io-desktop/nadp-reader.c
	(nadp_reader_ifactory_provider_read_start): Set minimal version number.

2010-07-30 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-icontext.c (is_candidate_for_basenames):
	Unref the GPatternSpec after use.

	* src/core/na-icontext.c (is_candidate_for_basenames):
	Implement the function.

	* src/core/na-selected-info.c:
	* src/core/na-selected-info.h (na_selected_info_get_basename):
	New function.

	* configure.ac:	Add a dependancy on libgtop.

	* src/core/na-icontext.c (is_candidate_for_show_if_running):
	Implement the function.

2010-07-29 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-formats.c:
	* src/io-desktop/nadp-formats.h: New files.
	These should have been added to 2.99.0, but where forgotten.

	* docs/nact/Makefile.am: New file.

	* configure.ac:
	* docs/Makefile.am: Updated accordingly.

	Create NACT user's manual skeleton.
	
	* docs/nact/C/appendix-feedback.xml:
	* docs/nact/C/appendix-gnu-fdl-1.3.xml:
	* docs/nact/C/articleinfo.xml:
	* docs/nact/C/figures/nact-basenames-tab.png:
	* docs/nact/C/figures/nact-capabilities-tab.png:
	* docs/nact/C/figures/nact-command-tab.png:
	* docs/nact/C/figures/nact-environment-tab.png:
	* docs/nact/C/figures/nact-execution-tab.png:
	* docs/nact/C/figures/nact-folders-tab.png:
	* docs/nact/C/figures/nact-legend.png:
	* docs/nact/C/figures/nact-main-empty.png:
	* docs/nact/C/figures/nact-mimetypes-tab.png:
	* docs/nact/C/figures/nact-preferences-export.png:
	* docs/nact/C/figures/nact-preferences-import.png:
	* docs/nact/C/figures/nact-preferences-io-providers.png:
	* docs/nact/C/figures/nact-preferences-runtime.png:
	* docs/nact/C/figures/nact-preferences-schemes.png:
	* docs/nact/C/figures/nact-preferences-ui.png: